@@ -26,3 +26,5 @@ oracle.dboutputStayOnTop=Stay on top
 
 OraclePlugin.title=Oracle
 OraclePlugin.hint=Preferences for Oracle
+
+OraclePlugin.timestampWarning=The setting to use string literals for timestamps may result in the inability to edit tables containing these columns.  If this problem occurs, open Global Preferences -> Data Type Controls and set Timestamps to use "JDBC standard escape format"
